# Mayat

./: .gitignore  .gitmodules  C.py  LICENSE.txt  MANIFEST.in  Makefile  README.md  anubis_pd.py  build_langs.py  checkoutback.sh  dev.py  pyproject.toml  requirements.txt  requirements_dev.txt  result.json  setup.py
.github/workflows/: testing.yml
anubis_pd/: AST.py  C_AST.py  Checker.py  Result.py  args.py  driver.py  main.py
anubis_pd/frontends/: C.py
benchmark/: mayatRunner.sh
mayat/: AST.py  Checker.py  Configurator.py  Result.py  args.py  driver.py  hw1.yaml  install_langs.py  midterm.yaml  partial_code_check_scenarios.txt  test.yaml
mayat/benchmark/: json_to_csv.py  mayatRunner.sh
mayat/frontends/: C.py  Java.py  Python.py  Python3.py  TS_C.py  TS_Java.py  TS_Python.py  test.py
mayat/result_viewer/: app.py
mayat/result_viewer/templates/: main.html
results/: f22_OS_Midterm_result.txt
src/mayat/: args.py  driver.py
src/mayat/frontends/: TS_C.py
tests/: test.py
tests/Java_Samples/: 1109.java  1422.java  1580.java  1624.java  1650.java  1741.java  1947.java  2082.java  2131.java  2170.java  2346.java  2479.java  2575.java  2743.java  2907.java  3029.java  3073.java  3404.java  353.java  3578.java  3647.java  3678.java  3797.java  3846.java  3854.java  3860.java  4018.java  4270.java  4345.java  4448.java  4461.java  470.java  4795.java  4870.java  4945.java  5007.java  5158.java  5245.java  5246.java  526.java  (+30 more)
tests/c_samples/: student1.c  student2.c  student3.c  student4.c
tests/python_samples/: student1.py  student2.py
(+2 files in other folders)
